added starter HTML and CSS for the navigation bar

--- a/index.html
+++ b/index.html
@@ -6,21 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 
 <body>
   <!-- main logo / nav -->
-  <header>
-    <h1>Lernantino</h1>
-    <nav>
-    </nav>
-  </header>
+  <nav class="header">
+    <a href="#default" class="logo">Tamsin Lloyd</a>
+      <div class="header-right">
+        <a href=".aboutme" class="#aboutme">About Me</a>
+        <a href=".work" class="work">Work</a>
+        <a href=".contact" class="#contact">Contact Me</a>
+      </div>
+  </nav>
+  <!-- Add links to -->
+ 
+
 
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Cool subtitle here!</h2>
+      <h2>Welcome to my portfolio!</h2>
     </div>
   </section>
 
