--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <a href=".contact" class="#contact">Contact Me</a>
       </div>
   </nav>
-  <!-- Add links to -->
+  <!-- Add links to relevant sections-->
  
 
 
   <!-- hero banner -->
   <section class="hero-banner">
     <div>
-      <h2>Welcome to my portfolio!</h2>
+      <h1>Welcome to my portfolio!</h1>
     </div>
   </section>
 
@@ -34,18 +34,42 @@
     <!-- about me -->
     <section class="page-section" id="about">
       <h2>About Me</h2>
+      <p>
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem unde similique sapiente aut? Provident libero impedit aperiam delectus ullam aliquid rem, quo placeat fuga illum suscipit tenetur ratione? Consequatur laudantium ab aperiam fugiat minima totam nostrum animi facilis, tenetur, impedit porro, est odio mollitia maiores iusto libero atque illo ad vero saepe! Similique voluptate quae vero enim! Exercitationem, architecto natus autem enim, molestiae nam nesciunt esse mollitia repellat itaque dolores aliquam sunt nihil inventore ad accusantium! Praesentium earum laborum autem optio officiis iure iste? Hic at voluptatibus necessitatibus eligendi exercitationem quod soluta nulla tempore, est velit, provident modi! Illo, aspernatur!</p>
     </section>
 
     <!-- portfolio container -->
-    <section class="page-section" id="work">
-      <h2>Work</h2>
-    </section>
+<section class="page-section" id="work">
+  <h2>Work</h2>
+
+    <div class="flex-grid">
+        <div class="grid-item1">Website Accessibility Project</div>
+        <div class="grid-item2">Project 2</div>
+        <div class="grid-item3">Project 3</div>
+        <div class="grid-item4">Project 4</div>
+        <div class="grid-item5">Project 5</div>
+        <div class="grid-item6">Project 6</div>
+        <div class="grid-item7">Project 7</div>
+        <div class="grid-item8">Project 8</div>
+        <div class="grid-item9">Project 9</div>
+    </div>
+</section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+    
+    <section class="page-section" id="contact">
+      <h2>Contact Me</h2>       
+        <ul>
+          <li><strong>Email:</strong> <a href="mailto:tamsin_lloyd@hotmail.com">tamsin_lloyd@hotmail.com</a></li>
+          <li><strong>Github:</strong> <a href="https://github.com/TamsinLloyd99" target="_blank">Click here!</a></li>
+          <li><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/tamsin-l-423584106/" target="_blank" >Click here!</a></li>
+          <!-- Add links -->
+        </ul>  
     </section>
   </main>
 </body>
+
+<!-- Pages must be responsive!!! -->
+
 
 </html>
