fixed extra space and alignment on page/made flexbox image into a link

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <nav class="header">
     <a href="#default" class="logo">Tamsin Lloyd</a>
       <div class="header-right">
-        <a href=".aboutme" class="#aboutme">About Me</a>
-        <a href=".work" class="work">Work</a>
-        <a href=".contact" class="#contact">Contact Me</a>
+        <a href="#about" class="#aboutme">About Me</a>
+        <a href="#work" class="work">Work</a>
+        <a href="#contact" class="#contact">Contact Me</a>
       </div>
   </nav>
   <!-- Add links to relevant sections-->
@@ -37,8 +37,9 @@
       <h2>About Me</h2>
     </div>
     <div id="firstparagraph">
-      <p>
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem unde similique sapiente aut? Provident libero impedit aperiam delectus ullam aliquid rem, quo placeat fuga illum suscipit tenetur ratione? Consequatur laudantium ab aperiam fugiat minima totam nostrum animi facilis, tenetur, impedit porro, est odio mollitia maiores iusto libero atque illo ad vero saepe! Similique voluptate quae vero enim! Exercitationem, architecto natus autem enim, molestiae nam nesciunt esse mollitia repellat itaque dolores aliquam sunt nihil inventore ad accusantium! Praesentium earum laborum autem optio officiis iure iste? Hic at voluptatibus necessitatibus eligendi exercitationem quod soluta nulla tempore, est velit, provident modi! Illo, aspernatur!</p>
+<p>Hi, my name is Tamsin. I am an ex-primary school teacher based in London. I've recently made a big career change and am now training to become a front-end web-developer. I hope to improve my skills and build up this portfolio.</p>
+
+<p>My hobbies include cooking and baking , crocheting, pottery and looking after all of my 20+ indoor plants 🪴. My family are from the Orkney Isles and I have been spending my summers there since I can remember. It is for this reason that I have grown to love all things related to nature and hope to reflect that in my work. If you are interested, please check out some of my work below! </p>
 </div>
     </section>
 
@@ -49,22 +50,25 @@ Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem unde simili
 </div>
     <div class="flex-container">
       <a href="https://tamsinlloyd99.github.io/Website-Accessibility-Challenge/starter/" target="_blank">
-        <div class="grid-item" id="one">Website Accessibility Project</a></div>
-        <div class="grid-item"></a>Project 2</div>
+        <div class="grid-item" id="one">Website Accessibility Project</div></a>
+    <div class="row">
+        <div class="grid-item">Project 2</div>
         <div class="grid-item">Project 3</div>
+      </div>
+      <div class="row">
         <div class="grid-item">Project 4</div>
         <div class="grid-item">Project 5</div>
-        <div class="grid-item">Project 6</div>
-        <div class="grid-item">Project 7</div>
-        <div class="grid-item">Project 8</div>
-        <div class="grid-item">Project 9</div>
+      </div>
+          
     </div>
 </section>
 
     <!-- contact -->
     
     <section class="page-section" id="contact">
-      <h2>Contact Me</h2>       
+      <div class="thirdheading">
+      <h2>Contact Me</h2>  
+    </div>     
         <ul>
           <li><strong>Email:</strong> <a href="mailto:tamsin_lloyd@hotmail.com">tamsin_lloyd@hotmail.com</a></li>
           <li><strong>Github:</strong> <a href="https://github.com/TamsinLloyd99" target="_blank">Click here!</a></li>
