updated to check mistakes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Lernantino // Web Developer</title>
+  <title>Tamsin Lloyd // Web Developer</title>
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -25,9 +25,6 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
-    <div>
-      <h1>Welcome to my portfolio!</h1>
-    </div>
   </section>
 
   <main class="page-wrapper">
@@ -50,16 +47,16 @@
 </div>
     <div class="flex-container">
       <a href="https://tamsinlloyd99.github.io/Website-Accessibility-Challenge/starter/" target="_blank">
+        <div class="projects">
         <div class="grid-item" id="one">Website Accessibility Project</div></a>
-    <div class="row">
-        <div class="grid-item">Project 2</div>
-        <div class="grid-item">Project 3</div>
-      </div>
-      <div class="row">
-        <div class="grid-item">Project 4</div>
-        <div class="grid-item">Project 5</div>
-      </div>
-          
+          <div class="row">
+            <div class="grid-item">Project 2</div>
+            <div class="grid-item">Project 3</div>
+          </div>
+          <div class="row">
+            <div class="grid-item">Project 4</div>
+            <div class="grid-item">Project 5</div>
+          </div>
     </div>
 </section>
 
