added missing porfolio image

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
   <!-- hero banner -->
   <section class="hero-banner">
+    <img src="./Images/Portfolio image.png" alt="image of me">
   </section>
 
   <main class="page-wrapper">
